--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_riverpod: ^2.3.6
   firebase_core: ^2.11.0
   cloud_firestore:
+  image_picker:
 
 
   # The following adds the Cupertino Icons font to your application.
