--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,7 @@ dependencies:
   firebase_core: ^2.11.0
   cloud_firestore:
   image_picker:
-
-
+  firebase_storage:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
